// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todo results show correctly when there are 2 files 1`] = `
<div
  data-testid="results"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle1"
    data-testid="msg-to-users"
  >
    Out of the 
    2
     file
    s
     you uploaded, 
    2
     file
    s
     contained TODOS.
  </h6>
  <ul
    className="MuiList-root MuiList-padding"
  >
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
          />
        </svg>
      </div>
      PositiveFile1.js
    </li>
    <li
      className="MuiListItem-root MuiListItem-gutters"
      disabled={false}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
          />
        </svg>
      </div>
      PositiveFile2.js
    </li>
  </ul>
</div>
`;

exports[`todo results show correctly when there are no files 1`] = `
<div
  data-testid="results"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle1"
    data-testid="msg-to-users"
  >
    Out of the 
    0
     file
    
     you uploaded, 
    0
     file
    
     contained TODOS.
  </h6>
  <ul
    className="MuiList-root MuiList-padding"
  />
</div>
`;
